--- a/packages/test-applications/angular-test-app/src/app/components/general-example/general-example.component.html
+++ b/packages/test-applications/angular-test-app/src/app/components/general-example/general-example.component.html
@@ -10,3 +10,7 @@
 <div>
   <inno-button (click)="showStatusMessage()">show toast</inno-button>
 </div>
+
+<div>
+  <inno-date-picker></inno-date-picker>
+</div>
