--- a/packages/stencil-lib/styles/siemens-ix/_scrollbar.scss
+++ b/packages/stencil-lib/styles/siemens-ix/_scrollbar.scss
@@ -19,22 +19,22 @@
   /* Track */
   ::-webkit-scrollbar-track {
     border-radius: 5px;
-    background: #eff0f1;
+    background: #2a3b40;
   }
 
   ::-webkit-scrollbar-track:hover {
-    background: #e2e4e6;
+    background: #2a3b40;
   }
 
   /* Handle */
   ::-webkit-scrollbar-thumb {
     border-radius: 5px;
-    background: #cfd2d5;
+    background: #566b73;
   }
 
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: #c2c6ca;
+    background: #566b73;
   }
 
   ::-webkit-scrollbar-corner {
