Update docs, cleanup

--- a/packages/stencil-lib/src/components/inno-date-picker-dropdown/inno-date-picker-dropdown.scss
+++ b/packages/stencil-lib/src/components/inno-date-picker-dropdown/inno-date-picker-dropdown.scss
@@ -30,7 +30,7 @@
 
   &.dark {
     border: 1px solid colors.$secondary-400;
-    background-color: colors.$secondary-900;
+    background-color: colors.$primary-200;
     color: colors.$secondary-300;
   }
 
