Add docs and cleanup

--- a/packages/test-applications/angular-test-app/src/app/components/general-example/general-example.component.html
+++ b/packages/test-applications/angular-test-app/src/app/components/general-example/general-example.component.html
@@ -12,5 +12,10 @@
 </div>
 
 <div>
-  <inno-date-picker></inno-date-picker>
+  <inno-date-picker
+    [range]="false"
+    (dateChange)="dateChange($event.detail)"
+  ></inno-date-picker>
+
+  Selected date value: {{ selectedDate }}
 </div>
