datetime fill fix

--- a/packages/test-applications/angular-test-app/src/app/components/general-example/general-example.component.html
+++ b/packages/test-applications/angular-test-app/src/app/components/general-example/general-example.component.html
@@ -15,6 +15,7 @@
   <inno-date-picker
     [range]="false"
     (dateChange)="dateChange($event.detail)"
+    weekStartIndex="6"
   ></inno-date-picker>
 
   Selected date value: {{ selectedDate }}
