Experimental fix for floating label issues.

--- a/packages/test-applications/angular-test-app/src/app/components/form-example/form-example.component.html
+++ b/packages/test-applications/angular-test-app/src/app/components/form-example/form-example.component.html
@@ -1,8 +1,9 @@
 <form [formGroup]="innomoticsForm">
-  <inno-input name="bubu" label="Inputbox" value="0" variant="light">
+  <inno-input id="bubu" name="bubu" label="Inputbox" value="0" variant="light">
     <input type="number" [formControl]="innoInput" />
     <inno-error type="badInput">Not valid</inno-error>
   </inno-input>
+  <button (click)="randomval()">randomval</button>
   <inno-select
     name="dew"
     label="SelectBox"
