Refactor date-picker calculation logic, add outer-month style

--- a/packages/stencil-lib/src/components/inno-date-picker/inno-date-picker.scss
+++ b/packages/stencil-lib/src/components/inno-date-picker/inno-date-picker.scss
@@ -148,6 +148,10 @@
       outline-offset: 1px;
     }
 
+    &.outer-day {
+      color: colors.$secondary-300;
+    }
+
     &.today {
       border: 2px solid colors.$primary-300;
 
