--- a/packages/stencil-lib/src/components/inno-tab-item/inno-tab-item.scss
+++ b/packages/stencil-lib/src/components/inno-tab-item/inno-tab-item.scss
@@ -25,7 +25,8 @@ $bar-active-height: 8px;
   font-size: 16px;
   font-weight: bold;
 
-  font-family: 'InnomoticsHafferSQ-Bold';
+  font-family: 'InnomoticsHafferSQ';
+  font-weight: bold;
 
   &::after {
     content: '';
