--- a/packages/stencil-lib/src/components/inno-radio/inno-radio.scss
+++ b/packages/stencil-lib/src/components/inno-radio/inno-radio.scss
@@ -19,7 +19,8 @@ $border-size: 1.5px;
   display: inline-flex;
   justify-content: flex-start;
   align-items: center;
-  font-family: 'InnomoticsHafferSQ-Light';
+  font-family: 'InnomoticsHafferSQ';
+  font-weight: 300;
   position: relative;
 
   // Remove focus default style
