--- a/packages/stencil-lib/src/components/inno-checkbox/inno-checkbox.scss
+++ b/packages/stencil-lib/src/components/inno-checkbox/inno-checkbox.scss
@@ -61,7 +61,7 @@ $border-size: 1px;
   cursor: pointer;
 
   &.focus {
-    transition: outline 300ms ease-in-out;
+    transition: outline 300ms cubic-bezier(0.84, 0, 0.58, 1);
     outline: $border-size solid colors.$focus-100;
     outline-offset: 2px;
   }
