--- a/packages/stencil-lib/src/components/inno-toggle/inno-toggle.scss
+++ b/packages/stencil-lib/src/components/inno-toggle/inno-toggle.scss
@@ -35,7 +35,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    transition: 300ms ease-in-out;
+    transition: all 300ms cubic-bezier(0.84, 0, 0.58, 1);
     border-radius: 14px;
 
     &.dark {
@@ -56,7 +56,7 @@
     bottom: -2px;
     background-color: colors.$primary-300;
     box-shadow: 0px 0px 3px 0px #08191F66;
-    transition: 300ms ease-in-out;
+    transition: all 300ms cubic-bezier(0.84, 0, 0.58, 1);
     border-radius: 50%;
   }
 
