basic table wrapper component

--- a/packages/stencil-lib/styles/innomotics.scss
+++ b/packages/stencil-lib/styles/innomotics.scss
@@ -1,3 +1,4 @@
+@use 'simplebar/dist/simplebar.min.css';
 @forward '@innomotics/brand-experience-fonts/dist/styles/innomoticsHaffer';
 @forward '@innomotics/brand-experience-icons/dist/styles/innomoticsIcons';
 @forward './layoutmixins';
