--- a/packages/stencil-lib/src/components/inno-input/inno-input.scss
+++ b/packages/stencil-lib/src/components/inno-input/inno-input.scss
@@ -42,8 +42,11 @@
         -webkit-box-shadow: 0 0 0px 1000px colors.$background-light-200 inset;
       }
 
-      &.disabled:disabled {
+      &.disabled, &:disabled {
         background-color: rgba(colors.$transparency-light-100, 0);
+        -webkit-text-fill-color: unset;
+        -webkit-box-shadow: unset;
+        box-shadow: unset;
       }
     }
 
@@ -56,7 +59,7 @@
       border: 1px solid colors.$highlight-light-100;
       box-shadow: inset 0px 0px 0px 1px colors.$highlight-light-100;
 
-      &.disabled:disabled {
+      &.disabled, &:disabled  {
         box-shadow: inset 0px 0px 0px 1px colors.$additional-light-300;
         border: 1px solid colors.$additional-light-300;
         background-color: colors.$transparency-light-100;
@@ -70,6 +73,10 @@
     &.invalid {
       box-shadow: inset 0px 0px 0px 1px colors.$status-light-error;
       border: 1px solid colors.$status-light-error;
+    }
+
+    &.disabled {
+      background-color: colors.$transparency-light-200;
     }
   }
 
@@ -91,11 +98,14 @@
       &:-webkit-autofill {
         -webkit-text-fill-color: colors.$text-dark-highemphasis;
         -webkit-box-shadow: 0 0 0px 1000px colors.$background-dark-200 inset;
+        box-shadow: 0 0 0px 1000px colors.$background-dark-200 inset;
       }
 
-      &.disabled {
+      &.disabled, &:disabled {
         background-color: rgba(colors.$transparency-dark-100, 0);
         color: colors.$text-dark-highemphasis;
+        -webkit-box-shadow: unset;
+        box-shadow: unset;
       }
     }
 
@@ -108,7 +118,7 @@
       border: 1px solid colors.$highlight-dark-100;
       box-shadow: inset 0px 0px 0px 1px colors.$highlight-dark-100;
 
-      &.disabled:disabled {
+      &.disabled, &:disabled {
         box-shadow: inset 0px 0px 0px 1px colors.$additional-dark-300;
         border: 1px solid colors.$additional-dark-300;
       }
