--- a/packages/test-applications/angular-test-app/src/app/app.component.html
+++ b/packages/test-applications/angular-test-app/src/app/app.component.html
@@ -9,7 +9,39 @@
     <inno-tab-item><span>Modal</span></inno-tab-item>
   </inno-tab>
 </div>
-
+<inno-table-base>
+  <table>
+    <thead>
+    <tr><th>Lorem ipsum</th><th>Lorem ipsum</th><th>Lorem ipsum</th><th>Lorem ipsum</th></tr>
+    </thead>
+    <tbody>
+    <tr>
+        <th>Lorem ipsum</th>
+        <td>Lorem ipsum</td>
+        <td>Lorem ipsum</td>
+        <td>Lorem ipsum</td>
+    </tr>
+    <tr>
+        <th>Lorem ipsum</th>
+        <td>Lorem ipsum</td>
+        <td>Lorem ipsum</td>
+        <td>Lorem ipsum</td>
+    </tr>
+    <tr>
+        <th>Lorem ipsum</th>
+        <td>Lorem ipsum</td>
+        <td>Lorem ipsum</td>
+        <td>Lorem ipsum</td>
+    </tr>
+    <tr>
+        <th>Lorem ipsum</th>
+        <td>Lorem ipsum</td>
+        <td>Lorem ipsum</td>
+        <td>Lorem ipsum</td>
+    </tr>
+    </tbody>
+</table>
+</inno-table-base>
 <div class="tab-content">
   <div *ngIf="activeTabIndex === 0">
     <app-general-example></app-general-example>
