grid and table fixes

--- a/packages/stencil-lib/styles/_base.scss
+++ b/packages/stencil-lib/styles/_base.scss
@@ -30,6 +30,7 @@ body {
 }
 
 table.inno-table {
+  display:contents;
   font-family: 'InnomoticsHafferSQ';
   border-collapse: collapse;
   border-spacing: 0;
