--- a/packages/stencil-lib/src/components/inno-table-base/inno-table-base.scss
+++ b/packages/stencil-lib/src/components/inno-table-base/inno-table-base.scss
@@ -33,8 +33,8 @@
       width: 100%;
       height: calc(100% - 25px);
       background-color: rgba(0, 0, 0, 0);
-      -webkit-mask-image: linear-gradient(to right, var(--left-mask-color) 0%, transparent 200px, transparent 50%, transparent calc(100% - 200px), var(--right-mask-color) 100%);
-      mask-image: linear-gradient(to right, var(--left-mask-color) 0%, transparent 200px, transparent 50%, transparent calc(100% - 200px), var(--right-mask-color) 100%);
+      -webkit-mask-image: linear-gradient(to right, var(--left-mask-color) 0%, transparent 10%, transparent 50%, transparent calc(100% - 200px), var(--right-mask-color) 100%);
+      mask-image: linear-gradient(to right, var(--left-mask-color) 0%, transparent 10%, transparent 50%, transparent calc(100% - 200px), var(--right-mask-color) 100%);
       mask-size: contain;
       --left-mask-color: transparent;
       --right-mask-color: transparent;
