changing grid system not to use subgrid

--- a/packages/stencil-lib/styles/_layoutmixins.scss
+++ b/packages/stencil-lib/styles/_layoutmixins.scss
@@ -1,28 +1,25 @@
 //divides the page into 36 equal columns
 @mixin inno-main-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr repeat(32, 40px) 1fr 1fr;
+  grid-template-columns: repeat(2,1fr) repeat(32, minmax(0,1fr)) repeat(2, 1fr);
 }
 
 //creates a subgrid that has the middle 32 columns
 @mixin inno-content-grid {
   display: grid;
-  grid-template-columns: subgrid;
   grid-column: 3 / 35;
+  grid-template-columns: repeat(32, minmax(0,1fr));
 }
 
 // creates a subgrid that uses all 36 columns of the main grid
 @mixin full-main-grid() {
   display: grid;
-  grid-column-start: 1;
-  grid-column-end: 37;
+  grid-column: 1 / 37;
 }
-
 
 //using all the 32 middle columns
 @mixin full-content-grid() {
-    grid-column-start: 1;
-    grid-column-end: 33;
+    grid-column: 1 / 33;
     display: grid;
 }
   
