adding media 1440 limiting for grid

--- a/packages/stencil-lib/styles/_layoutmixins.scss
+++ b/packages/stencil-lib/styles/_layoutmixins.scss
@@ -1,14 +1,17 @@
 //divides the page into 36 equal columns
 @mixin inno-main-grid {
   display: grid;
-  grid-template-columns: repeat(2,1fr) repeat(32, minmax(0,1fr)) repeat(2, 1fr);
+  grid-template-columns: repeat(36, 1fr);
+  @media screen and (min-width:1440px) {
+    grid-template-columns: repeat(2,1fr) repeat(32, 45px) repeat(2, 1fr);
+  }
 }
 
 //creates a subgrid that has the middle 32 columns
 @mixin inno-content-grid {
   display: grid;
   grid-column: 3 / 35;
-  grid-template-columns: repeat(32, minmax(0,1fr));
+  grid-template-columns: repeat(32, 1fr);
 }
 
 // creates a subgrid that uses all 36 columns of the main grid
@@ -19,7 +22,6 @@
 
 //using all the 32 middle columns
 @mixin full-content-grid() {
-    grid-column: 1 / 33;
-    display: grid;
+  grid-column: 1 / 33;
+  display: grid;
 }
-  
