Add inno-tab emphasized design, cleanup design to make to more customizable

--- a/packages/stencil-lib/src/components/inno-tab/inno-tab.scss
+++ b/packages/stencil-lib/src/components/inno-tab/inno-tab.scss
@@ -20,11 +20,11 @@
   font-weight: bold;
 
   &.light {
-    background-color: colors.$primary-300;
+    background-color: transparent;
   }
 
   &.dark {
-    background-color: colors.$primary-200;
+    background-color: transparent;
   }
 }
 
