--- a/packages/stencil-lib/src/components/inno-tab-item/inno-tab-item.scss
+++ b/packages/stencil-lib/src/components/inno-tab-item/inno-tab-item.scss
@@ -39,7 +39,6 @@ $bar-active-height: 8px;
   }
 
   &.light {
-    background-color: colors.$primary-300;
     color: colors.$secondary-800;
 
     &::after {
@@ -49,7 +48,6 @@ $bar-active-height: 8px;
   }
 
   &.dark {
-    background-color: colors.$primary-200;
     color: colors.$secondary-300;
 
     &::after {
@@ -73,6 +71,26 @@ $bar-active-height: 8px;
 
   .hidden {
     display: none;
+  }
+
+  &.emphasized {
+    &.light {
+      color: colors.$primary-200;
+
+      &::after {
+        opacity: 1;
+        background-color: colors.$primary-200;
+      }
+    }
+
+    &.dark {
+      color: colors.$primary-300;
+
+      &::after {
+        opacity: 1;
+        background-color: colors.$primary-300;
+      }
+    }
   }
 }
 
@@ -112,6 +130,26 @@ $bar-active-height: 8px;
       background-color: colors.$secondary-300;
     }
   }
+
+  &.emphasized {
+    &.light {
+      color: colors.$primary-200;
+
+      &::after {
+        opacity: 1;
+        background-color: colors.$primary-200;
+      }
+    }
+
+    &.dark {
+      color: colors.$primary-300;
+
+      &::after {
+        opacity: 1;
+        background-color: colors.$primary-300;
+      }
+    }
+  }
 }
 
 :host(:active) {
@@ -120,7 +158,6 @@ $bar-active-height: 8px;
   }
 
   &.light {
-    background-color: colors.$primary-300;
     color: colors.$primary-200;
 
     &::after {
@@ -130,7 +167,6 @@ $bar-active-height: 8px;
   }
 
   &.dark {
-    background-color: colors.$primary-200;
     color: colors.$primary-100;
 
     &::after {
@@ -148,7 +184,6 @@ $bar-active-height: 8px;
   }
 
   &.light {
-    background-color: colors.$primary-300;
     color: colors.$secondary-800;
 
     &::after {
@@ -158,7 +193,6 @@ $bar-active-height: 8px;
   }
 
   &.dark {
-    background-color: colors.$primary-200;
     color: colors.$secondary-800;
 
     &::after {
@@ -174,7 +208,6 @@ $bar-active-height: 8px;
   }
 
   &.light {
-    background-color: colors.$primary-300;
     color: colors.$primary-200;
 
     &::after {
@@ -184,7 +217,6 @@ $bar-active-height: 8px;
   }
 
   &.dark {
-    background-color: colors.$primary-200;
     color: colors.$primary-100;
 
     &::after {
