forcing padding on breadcrumb item to avoid user agent default style

--- a/packages/stencil-lib/src/components/inno-breadcrumb/inno-breadcrumb.scss
+++ b/packages/stencil-lib/src/components/inno-breadcrumb/inno-breadcrumb.scss
@@ -22,6 +22,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     gap: 4px;
+    padding: 0px;
     ::slotted(inno-breadcrumb-item:last-of-type) {
       font-weight: bold;
     }
