Style fixes, inno-input's disabled state is now in sync with the input's disabled state.

--- a/packages/stencil-lib/src/components/inno-input/inno-input.scss
+++ b/packages/stencil-lib/src/components/inno-input/inno-input.scss
@@ -177,7 +177,7 @@
 
   .float {
     transform: translate(0rem, 0.5rem) scale(1);
-    font-size: small;
+    font-size: 12px;
   }
 
   &.disabled {
