--- a/packages/test-applications/angular-test-app/src/app/app.component.html
+++ b/packages/test-applications/angular-test-app/src/app/app.component.html
@@ -1,55 +1,1 @@
-<div class="tabs">
-  <inno-tab
-    [selected]="activeTabIndex"
-    layout="stretched"
-    (selectedChange)="handleTabChange($event.detail)"
-  >
-    <inno-tab-item><span>General</span></inno-tab-item>
-    <inno-tab-item><span>Form</span></inno-tab-item>
-    <inno-tab-item><span>Modal</span></inno-tab-item>
-  </inno-tab>
-</div>
-<inno-table-base>
-  <table>
-    <thead>
-    <tr><th>Lorem ipsum</th><th>Lorem ipsum</th><th>Lorem ipsum</th><th>Lorem ipsum</th></tr>
-    </thead>
-    <tbody>
-    <tr>
-        <th>Lorem ipsum</th>
-        <td>Lorem ipsum</td>
-        <td>Lorem ipsum</td>
-        <td>Lorem ipsum</td>
-    </tr>
-    <tr>
-        <th>Lorem ipsum</th>
-        <td>Lorem ipsum</td>
-        <td>Lorem ipsum</td>
-        <td>Lorem ipsum</td>
-    </tr>
-    <tr>
-        <th>Lorem ipsum</th>
-        <td>Lorem ipsum</td>
-        <td>Lorem ipsum</td>
-        <td>Lorem ipsum</td>
-    </tr>
-    <tr>
-        <th>Lorem ipsum</th>
-        <td>Lorem ipsum</td>
-        <td>Lorem ipsum</td>
-        <td>Lorem ipsum</td>
-    </tr>
-    </tbody>
-</table>
-</inno-table-base>
-<div class="tab-content">
-  <div *ngIf="activeTabIndex === 0">
-    <app-general-example></app-general-example>
-  </div>
-  <div *ngIf="activeTabIndex === 1">
-    <app-form-example></app-form-example>
-  </div>
-  <div *ngIf="activeTabIndex === 2">
-    <app-modal-example></app-modal-example>
-  </div>
-</div>
+<inno-paginator page-count="10"></inno-paginator>
