--- a/packages/stencil-lib/src/components/inno-tab-item/inno-tab-item.scss
+++ b/packages/stencil-lib/src/components/inno-tab-item/inno-tab-item.scss
@@ -95,6 +95,13 @@ $bar-active-height: 8px;
       }
     }
   }
+
+  &.minimal-decorator {
+    &::after {
+      content: '';
+      height: 0;
+    }
+  }
 }
 
 :host(:focus-visible) {
