--- a/packages/stencil-lib/src/components/inno-button/inno-button.scss
+++ b/packages/stencil-lib/src/components/inno-button/inno-button.scss
@@ -90,6 +90,27 @@
       }
     }
 
+    &.delete {
+      background-color: transparent;
+
+      &.dark,&.light {
+        border: 2px solid colors.$error-200;
+        color: colors.$error-200;
+
+        &:hover:not(.disabled):not(:disabled) {
+          border-color: colors.$error-200;
+          color: colors.$text-light-buttonlabel;
+          box-shadow: inset 0 -48px colors.$error-200;
+        }
+
+        &:active:not(.disabled):not(:disabled) {
+          border-color: colors.$error-100;
+          color: colors.$text-light-buttonlabel;
+          box-shadow: inset 0 -48px colors.$error-100;
+        }
+      }
+    }
+
     &.secondary {
       background-color: transparent;
 
