--- a/packages/stencil-lib/src/components/inno-date-picker-dropdown/inno-date-picker-dropdown.scss
+++ b/packages/stencil-lib/src/components/inno-date-picker-dropdown/inno-date-picker-dropdown.scss
@@ -3,12 +3,13 @@
 :host {
   display: block;
   position: relative;
-  width: 380px;
+  width: 100%;
+  max-width: 380px;
   height: 56px;
 }
 
 .picker {
-  width: 380px;
+  width: 100%;
   height: 56px;
   padding-left: 16px;
   padding-right: 16px;
