--- a/packages/stencil-lib/styles/innomotics.scss
+++ b/packages/stencil-lib/styles/innomotics.scss
@@ -2,6 +2,7 @@
 @use './components/inno-radiobutton';
 @use './components/inno-pane';
 @use './components/inno-status-message-container';
+@use './components/inno-input';
 
 @forward '@innomotics/brand-experience-fonts/dist/styles/innomoticsHaffer';
 @forward '@innomotics/brand-experience-icons/dist/styles/innomoticsIcons';
